S3Driver - delete file (#474)
* shouldDeleteFileWhenFileExists

* Revert return value for public method

* Fix codacy issue: white space

* Bump version